; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcclibs/libgomp/extr_loop.c_gomp_loop_ordered_static_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcclibs/libgomp/extr_loop.c_gomp_loop_ordered_static_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gomp_thread = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@GFS_STATIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i64, i64, i64*, i64*)* @gomp_loop_ordered_static_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gomp_loop_ordered_static_start(i64 %0, i64 %1, i64 %2, i64 %3, i64* %4, i64* %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i64*, align 8
  %13 = alloca %struct.gomp_thread*, align 8
  store i64 %0, i64* %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64* %4, i64** %11, align 8
  store i64* %5, i64** %12, align 8
  %14 = call %struct.gomp_thread* (...) @gomp_thread()
  store %struct.gomp_thread* %14, %struct.gomp_thread** %13, align 8
  %15 = call i64 @gomp_work_share_start(i32 1)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %6
  %18 = load %struct.gomp_thread*, %struct.gomp_thread** %13, align 8
  %19 = getelementptr inbounds %struct.gomp_thread, %struct.gomp_thread* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %20, align 8
  %22 = load i64, i64* %7, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load i64, i64* %9, align 8
  %25 = load i32, i32* @GFS_STATIC, align 4
  %26 = load i64, i64* %10, align 8
  %27 = call i32 @gomp_loop_init(%struct.TYPE_4__* %21, i64 %22, i64 %23, i64 %24, i32 %25, i64 %26)
  %28 = call i32 (...) @gomp_ordered_static_init()
  br label %29

29:                                               ; preds = %17, %6
  %30 = load %struct.gomp_thread*, %struct.gomp_thread** %13, align 8
  %31 = getelementptr inbounds %struct.gomp_thread, %struct.gomp_thread* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = call i32 @gomp_mutex_unlock(i32* %34)
  %36 = load i64*, i64** %11, align 8
  %37 = load i64*, i64** %12, align 8
  %38 = call i32 @gomp_iter_static_next(i64* %36, i64* %37)
  %39 = icmp ne i32 %38, 0
  %40 = xor i1 %39, true
  %41 = zext i1 %40 to i32
  ret i32 %41
}

declare dso_local %struct.gomp_thread* @gomp_thread(...) #1

declare dso_local i64 @gomp_work_share_start(i32) #1

declare dso_local i32 @gomp_loop_init(%struct.TYPE_4__*, i64, i64, i64, i32, i64) #1

declare dso_local i32 @gomp_ordered_static_init(...) #1

declare dso_local i32 @gomp_mutex_unlock(i32*) #1

declare dso_local i32 @gomp_iter_static_next(i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
